test/fixtures/err.expected

> npm-run-batch@0.0.5 batch:error /Users/sramam/github/sramam/npm-run-batch
> node ./index.js


> npm-run-batch@0.0.5 sample:1 /Users/sramam/github/sramam/npm-run-batch
> node ./scripts/colored.js -t 1001

Colored: before timeout 1001
Colored: after timeout 1001

> npm-run-batch@0.0.5 sample:err /Users/sramam/github/sramam/npm-run-batch
> node ./scripts/error.js

before error 1000
/Users/sramam/github/sramam/npm-run-batch/scripts/error.js:12
throw new Error (chalk.red('Sequence errored out'))
^

Error: Sequence errored out
    at Object.<anonymous> (/Users/sramam/github/sramam/npm-run-batch/scripts/error.js:12:7)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:422:7)
    at startup (bootstrap_node.js:143:9)
    at bootstrap_node.js:537:3
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! npm-run-batch@0.0.5 sample:err: `node ./scripts/error.js`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the npm-run-batch@0.0.5 sample:err script 'node ./scripts/error.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the npm-run-batch package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node ./scripts/error.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs npm-run-batch
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls npm-run-batch
npm ERR! There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /Users/sramam/.npm/_logs/2017-03-19T17_15_24_156Z-debug.log
Unhandled rejection Error: ERROR:npm,run-script,sample:err exited with status code 1
    at makeError (/Users/sramam/github/sramam/npm-run-batch/index.js:22:12)
    at ChildProcess.<anonymous> (/Users/sramam/github/sramam/npm-run-batch/index.js:39:15)
    at Object.onceWrapper (events.js:291:19)
    at emitTwo (events.js:106:13)
    at ChildProcess.emit (events.js:192:7)
    at maybeClose (internal/child_process.js:890:16)
    at Process.ChildProcess._handle.onexit (internal/child_process.js:226:5)

